add mvn package