@@ -7,7 +7,127 @@
 
 	<properties>
 		<spring.version>3.2.9.RELEASE</spring.version>
+		
+		<finalName>game-server</finalName>
+
+		<appassembler.target>${project.build.directory}/appassembler</appassembler.target>
+		<appassembler.assemble.directory>${appassembler.target}/jsw/${finalName}</appassembler.assemble.directory>
 	</properties>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.8.1</version>
+				<executions>
+					<execution>
+						<id>generate-jsw-scripts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-daemons</goal>
+						</goals>
+						<configuration>
+							<repositoryLayout>flat</repositoryLayout>
+							<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+							<target>${appassembler.target}</target>
+							<assembleDirectory>${appassembler.assemble.directory}</assembleDirectory>
+
+							<daemons>
+								<daemon>
+									<id>game-server</id>
+									<mainClass>com.simplegame.server.start.ServerStart</mainClass>
+									<generatorConfigurations>
+										<generatorConfiguration>
+											<generator>jsw</generator>
+											<includes>
+												<include>linux-x86-64</include>
+												<include>windows-x86-64</include>
+											</includes>
+
+											<configuration>
+												<property>
+													<name>configuration.directory.in.classpath.first</name>
+													<value>./</value>
+												</property>
+												<property>
+													<name>wrapper.logfile</name>
+													<value>logs/wrapper.log</value>
+												</property>
+											</configuration>
+
+										</generatorConfiguration>
+									</generatorConfigurations>
+
+									<platforms>
+										<platform>jsw</platform>
+									</platforms>
+
+									<jvmSettings>
+										<initialMemorySize>1024M</initialMemorySize>
+										<maxMemorySize>2048M</maxMemorySize>
+										<systemProperties>
+											<!-- 
+											<systemProperty>com.sun.management.jmxremote</systemProperty>
+											<systemProperty>com.sun.management.jmxremote.port=8998</systemProperty>
+											<systemProperty>com.sun.management.jmxremote.authenticate=false</systemProperty>
+											<systemProperty>com.sun.management.jmxremote.ssl=false</systemProperty>
+											 -->
+										</systemProperties>
+										<extraArguments>
+											<extraArgument>-server</extraArgument>
+											<extraArgument>-XX:PermSize=256M</extraArgument>
+											<extraArgument>-XX:MaxPermSize=256M</extraArgument>
+											<extraArgument>-Xloggc:logs/gc.log</extraArgument>
+										</extraArguments>
+									</jvmSettings>
+								</daemon>
+							</daemons>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>${finalName}</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptors>
+						<descriptor>src/main/resources/assembly/jsw.xml </descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
